correction requete et doc swagger
